RESOLVED FIXED266099
DNR content rule list notifications aren't being delivered to the correct extension
https://bugs.webkit.org/show_bug.cgi?id=266099
Summary DNR content rule list notifications aren't being delivered to the correct ext...
Brian Weinstein
Reported 2023-12-08 13:32:17 PST
.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-08 13:32:24 PST
Brian Weinstein
Comment 2 2023-12-08 13:38:32 PST
EWS
Comment 3 2023-12-08 15:35:20 PST
Committed 271762@main (b09450296bb7): <https://commits.webkit.org/271762@main> Reviewed commits have been landed. Closing PR #21527 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.